Fix spacing between cards on small screens and picture placement

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -120,7 +120,6 @@ main {
   gap: 20px;
   margin-top: 40px;
   min-height: calc(100vh - 200px);
-  padding: 0 30px;
 }
 
 .headline-text {
@@ -155,6 +154,7 @@ main {
 }
 
 .headline-content {
+  margin: 40px 0;
   display: flex;
   align-items: center;
   gap: 40px;
@@ -163,7 +163,6 @@ main {
 }
 
 .headline-card {
-  margin: 40px 0;
   padding: 20px;
   background-color: rgb(244, 244, 244);
   display: flex;
@@ -262,6 +261,9 @@ main {
 
 /* styles for larger screen sizes */
 @media (min-width: 640px) {
+    .site {
+        flex-direction: row;
+      }
 }
 
 @media (min-width: 768px) {
@@ -271,9 +273,6 @@ main {
 }
 
 @media (min-width: 1024px) {
-  .site {
-    flex-direction: row;
-  }
 
   .site-image > img {
     height: 400px;
